--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "express-simple-starter",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
